# $Id$
2007-06-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* Portugese (from portugal) translation contributed by MiguelCMA
	* locale/gen.sh:  Major change to .po file generation.  Now uses msgmerge so we won't completely throw away previous efforts by translators (will preserve comments, and use fuzzy translation).  It's also much faster (seconds instead of minutes), and produces less strings to translate.
	
2007-08-03 Damien Raude-Morvan <drazzib@drazzib.com>
	* init_php.php : Fix #363 by applying patch from Leandro to correctly set timezone info in Wifidog
	if set in configuration (allow Wifidog to work not only in Canada :).

2007-07-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* DependenciesList::hook_menu():  Fix menu path conflict with Server::hook_menu();
	* Server::getAdminUI(): Add output to help debug timezone problems.  	

2007-07-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* VirtualHost.php:  Fix critical problem preventing new Virtual Hosts from being created.  Thanks to Miguel for pointing this out!ssss
	* StatisticGraph.php:  Fix a bad return by reference that prevented graphs from being displayed.  Thanks to Daniel Lemay for finding it.
	* Content.php:  Fix warning when selecting owners. Fix dangling metadata objects when deleting an object.
	* Statistics::getDateRangeUI():  Make days end a minute before midnight, not a minute before noon, DOH!
	* import_user_database.php:  Fix permission call systax error.  That does't mean the script works as a whole, it hasn't been maintained for years.
	* DependenciesList.php:  Make it extend GenericDataObject after all.  Fixes problem displaying it in the generic editor.
	
2007-07-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* generic_object_admin.pgp:  Fix problems when creating new content objects.  Fix problems including the content type classes.
	* Avatar.php:  Make the resampling code support any format available to GD, not just jpeg.
	
2007-07-22 Benoit Grégoire  <bock@step.polymtl.ca>